<resources>
    <string name="app_name">WatchIt</string>
    <string name="networkErrorText">Something is not right with your Mobile !!!</string>
    <string name="movie_title">Movie Title</string>
    <string name="retryText">Retry</string>
    <string name="error_image_content_desc">Error Loading top rated movies image</string>
    <string name="poster_image">Poster Image</string>
    <string name="movie_rating">Movie Rating :</string>
    <string name="overview">Overview : </string>
    <string name="release_data">Release Data :</string>
    <string name="movie_detail_heading_font">"@font/coda"</string>
    <string name="search_firstplaceholder">What you want know now ?</string>
    <string name="logo">logo</string>
    <string name="search_empty_text">Nothing to find try something else!</string>
    <!-- region UI -->
    <string name="movie">Movies</string>
    <string name="tv">Series</string>
    <string name="search">Search</string>
    <string name="welcome_guest">Welcome, Guest</string>
    <string name="series_list_coming_soon">Series list coming soon</string>
    <string name="setting">setting</string>
    <string name="select_theme">Select Theme</string>
    <string name="default_theme">Default</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="submit_theme">submit</string>
    <!-- endregion UI -->
</resources>
