<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/movieListFragment"
            android:icon="@drawable/ic_movie_24dp"
            android:title="@string/movie"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/tvListFragment"
            android:icon="@drawable/ic_tv_24dp"
            android:title="@string/tv"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/settingFragment"
            android:icon="@drawable/ic_settings_applications_24dp"
            android:title="@string/setting"
            app:showAsAction="ifRoom" />
    </group>

</menu>