<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    tools:showIn="@layout/search_movie_fragment">

    <ImageView
        android:id="@+id/tvImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_launcher_watch_it_foreground" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvImage"
        android:layout_centerInParent="true"
        android:fontFamily="@string/movie_detail_heading_font"
        android:text="@string/search_empty_text"
        android:textColor="@color/headTextColor"
        android:textSize="20sp" />
</RelativeLayout>