<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".screens.moviedetail.controller.MovieDetailFragment">

    <RelativeLayout
        android:id="@+id/movieDetailContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/posterContainer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/movieDetailPosterHeight">

            <ImageView
                android:id="@+id/movieDetailPosterImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/poster_image"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_image_24px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movieDetailMovieTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/movieTitleBackground"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center_vertical"
                android:padding="@dimen/commonPadding"
                android:text="@string/movie_title"
                android:textColor="@android:color/white"
                android:textSize="@dimen/commonTextSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/posterContainer"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movieDetailMovieOverviewHeadTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/movie_detail_heading_font"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/commonPadding"
                android:paddingLeft="@dimen/commonPadding"
                android:paddingTop="@dimen/commonPadding"
                android:paddingEnd="@dimen/commonPadding"
                android:paddingRight="@dimen/commonPadding"
                android:text="@string/overview"
                android:textColor="?app_color_headText"
                android:textSize="@dimen/commonTextSize" />

            <TextView
                android:id="@+id/movieDetailMovieOverviewTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@string/movie_detail_heading_font"
                android:gravity="center_vertical"
                android:maxLines="@integer/overviewMaxLength"
                android:paddingStart="@dimen/commonPadding"
                android:paddingLeft="@dimen/commonPadding"
                android:paddingEnd="@dimen/commonPadding"
                android:paddingRight="@dimen/commonPadding"
                android:paddingBottom="@dimen/commonPadding"
                android:textColor="?app_color_text"
                android:textSize="@dimen/commonTextSize" />

            <TextView
                android:id="@+id/movieDetailMovieRatingTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/movie_detail_heading_font"
                android:gravity="center_vertical"
                android:padding="@dimen/commonPadding"
                android:text="@string/movie_rating"
                android:textColor="?app_color_headText"
                android:textSize="@dimen/commonTextSize" />

            <TextView
                android:id="@+id/movieDetailMovieReleaseDataTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/movie_detail_heading_font"
                android:gravity="center_vertical"
                android:padding="@dimen/commonPadding"
                android:text="@string/release_data"
                android:textColor="?app_color_headText"
                android:textSize="@dimen/commonTextSize" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </RelativeLayout>

</androidx.core.widget.NestedScrollView>